--- a/src/app/components/icons-toolbar/icons-toolbar.component.scss
+++ b/src/app/components/icons-toolbar/icons-toolbar.component.scss
@@ -11,25 +11,6 @@
   transition: background-color 0.218s ease-in-out, box-shadow 0.218s ease-in-out;
 }
 
-.clo {
-  margin-right: 15px;
-  border-radius: 4px;
-  box-sizing: border-box;
-  color: rgba(0, 0, 0, 0.87);
-  letter-spacing: 0.01785714em;
-  font-family: "google-sans", Roboto, Arial, sans-serif;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  font-weight: 500;
-  height: 36px;
-  padding: 8px 24px;
-}
-
-.clo:hover {
-  background-color: rgba(95, 99, 104, 0.05);
-  cursor: pointer;
-}
-
 .toolbar {
   flex: 1 0 auto;
   box-sizing: border-box;
@@ -46,32 +27,118 @@
   background-size: 18px 18px;
   border: 1px solid transparent;
   height: 32px;
-  margin: 0 8px;
+  // margin: 0 8px;
+  margin: 0 3px;
   width: 32px;
   opacity: 0.6;
 }
 
-.toolbar div:nth-child(1) {
+.rem {
   background-image: url(../../../assets/bell.svg);
-  :hover {
-    opacity: 1;
-  }
 }
-.toolbar div:nth-child(2) {
+.collaborator {
   background-image: url(../../../assets/user.svg);
 }
-.toolbar div:nth-child(3) {
+.color {
   background-image: url(../../../assets/color.svg);
 }
-.toolbar div:nth-child(4) {
+.img {
   background-image: url(../../../assets/image.svg);
 }
-.toolbar div:nth-child(5) {
+.archive {
   background-image: url(../../../assets/archieve.svg);
 }
-.toolbar div:nth-child(6) {
+.more {
   background-image: url(../../../assets/more.svg);
 }
-.toolbar div:nth-child(7) {
+.undo {
   background-image: url(../../../assets/undo.svg);
+}
+
+.toolbar div:hover {
+  opacity: 1;
+}
+
+.menu {
+  user-select: none;
+  opacity: 1;
+  left: 220px;
+  top: 25px;
+  background-color: #fff;
+  border-width: 0;
+  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302), 0 2px 6px 2px rgba(60, 64, 67, 0.149);
+  position: absolute;
+  border-radius: 4px;
+  z-index: 5003;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  cursor: default;
+  font-size: 13px;
+  margin: 0;
+  outline: none;
+  padding: 6px 0;
+  transition: opacity 0.218s;
+  background: #fff;
+}
+
+.menu div div {
+  position: relative;
+  cursor: pointer;
+  list-style: none;
+  margin: 0;
+  padding: 5px 15px;
+  white-space: nowrap;
+}
+
+.menu div div:hover {
+  background-color: rgb(248, 244, 244);
+}
+
+.menui {
+  left: 25px;
+  .menu1 {
+    display: none;
+  }
+}
+
+.menue {
+  .menu2 {
+    display: none;
+  }
+}
+
+.colorbox {
+  width: 136px;
+  background-color: #fff;
+  box-sizing: border-box;
+  z-index: 10;
+  padding: 5px 7px 3px;
+  position: absolute;
+  // transition: visibility 0s ease 0.218s, opacity 0.218s linear;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+}
+
+.colorbox div {
+  border: 0.5px solid transparent;
+  border-radius: 50%;
+  box-sizing: border-box;
+  overflow: hidden;
+  height: 26px;
+  width: 26px;
+  margin: 2px;
+  // display: inline-flex;
+  display: inline-block;
+  border-color: #e0e0e0;
+}
+
+.mat-menu-content:not(:empty) {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.ele:focus {
+  background-image: url(../../../assets/checkmark.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 25px;
+  width: 25px;
 }
