--- a/src/app/components/trash/trash.component.html
+++ b/src/app/components/trash/trash.component.html
@@ -1,3 +1,6 @@
-<p>
-  trash works!
-</p>
+<!-- <div>
+  <app-user-notes [getCards]="trashCards" (trashAction)="userRes()" ></app-user-notes>
+</div> -->
+<P>
+  trash works
+</P>
