--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -54,7 +54,7 @@
         </div>
         <div class="icons3">
           <div title="Refresh" class=refreshico (click)=refresh()></div>
-          <div title="list" class=listico></div>
+          <div title="list" (click)="onViewChange()" [ngClass]="view"></div>
           <div title="Settings" class=settingsico></div>
         </div>
       </div>
@@ -95,10 +95,21 @@
             </li>
           </ul>
           <ul class="sul">
-            <li class="sli tes">
-              <div class="qwer">
-                LABELS
-              </div>
+            <div class="qwer">LABELS</div>
+
+            <li class="sli" *ngFor="let l of labels">
+              <a>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="gb_jc">
+                  <path
+                    d="M17.63 5.84C17.27 5.33 16.67 5 16 5L5 5.01C3.9 5.01 3 5.9 3 7v10c0 1.1.9 1.99 2 1.99L16 19c.67 0 1.27-.33 1.63-.84L22 12l-4.37-6.16zM16 17H5V7h11l3.55 5L16 17z">
+                  </path>
+                </svg>
+                <span class="stext">{{l}}</span>
+              </a>
+            </li>
+
+
+            <li class="sli">
               <a>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="gb_mc">
                   <path
