--- a/src/app/components/dashboard/components/note/note.component.html
+++ b/src/app/components/dashboard/components/note/note.component.html
@@ -1,4 +1,4 @@
 <div>
   <app-take-note (addingNote)="userinteract()"></app-take-note>
-  <app-user-notes [getCards]="allCards" (action)="userinteract()"></app-user-notes>
+  <app-user-notes [getCards]="allCards" (actionOne)="userinteract()"></app-user-notes>
 </div>
