--- a/src/app/components/dashboard/components/user-notes/user-notes.component.html
+++ b/src/app/components/dashboard/components/user-notes/user-notes.component.html
@@ -18,7 +18,7 @@
 
 <!-- ----------------------------------------------------------------------------- -->
 
-<div class="container" *ngIf="!viewType">
+<div class="container" *ngIf="!viewType" style="height: 200px;">
   <div class="fullii">
     <!-- <div class="pinned">PINNED</div>
     <div class="pinned">OTHERS</div> -->
@@ -32,6 +32,21 @@
             <div class="edi1" aria-label="Created yesterday, 10:25 AM">Edited yesterday, 10:25 AM</div>
           </div> -->
       </div>
+      <div class="rembox" [ngStyle]="{'display': (card.reminder === undefined) ? 'none' : 'flex'}">
+        <div class="remboxc1">
+          <div class="remboxc11">
+            <div class="clk"></div>
+            <label class="time" [ngStyle]="{'display': date0 === card.reminder ? 'block' : 'none'}">Yesterday,
+              {{card.reminder | date:'h:mm a'}}</label>
+            <label class="time" [ngStyle]="{'display': date1 === card.reminder ? 'block' : 'none'}">Today,
+              {{card.reminder | date:'h:mm a'}}</label>
+            <label class="time" [ngStyle]="{'display': date2 === card.reminder ? 'block' : 'none'}">Tommorrow,
+              {{card.reminder | date:'h:mm a'}}</label>
+            <label class="time"
+              [ngStyle]="{'display': !(date3 > card.reminder) ? 'block' : 'none'}">{{card.reminder | date:'MMMM d, h:mm a'}}</label>
+          </div>
+        </div>
+      </div>
       <div class="iconbar">
         <app-icons-toolbar [card]="card" [undo]="userNoteMsg" (action)="noteCall()" (trashact)="trashCall()"
           (archiveAct)="archiveCall()">
@@ -40,6 +55,7 @@
     </div>
   </div>
 </div>
+
 <!-- ----------------------------------------------------------------------------------------------- -->
 
 
