--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -35,7 +35,7 @@
             </button>
 
 
-            <input type="text" placeholder="Search">
+            <input class="input" type="text" placeholder="Search">
 
 
             <button class="button close">
