--- a/src/app/components/dashboard/components/icons-toolbar/icons-toolbar.component.html
+++ b/src/app/components/dashboard/components/icons-toolbar/icons-toolbar.component.html
@@ -1,6 +1,6 @@
 <div class="iconlist">
   <div class="toolbar">
-    <div class="rem" *ngIf=url></div>
+    <div class="rem" *ngIf=url [matMenuTriggerFor]="reminders"></div>
     <div class="collaborator" *ngIf=url></div>
     <div class="color" *ngIf=url [matMenuTriggerFor]="colri"></div>
     <div class="img" *ngIf=url></div>
@@ -29,5 +29,117 @@
   <div class=colorbox>
     <div (click)="color(obj,card)" *ngFor="let obj of colorbox" [attr.title]="obj.title"
       [ngStyle]="{'background-color':obj.color}"></div>
+  </div>
+</mat-menu>
+
+
+<mat-menu #reminders="matMenu">
+  <div class="reminders" [style.display]="!pdt?'block':'none'">
+    <div class="ch1">
+      Reminder:
+    </div>
+    <div class="remcom">
+      <div class="ch" (click)="setReminder(card,'Today','8:00PM')">
+        <div class="text">
+          Later today
+        </div>
+        <div class="time">
+          8:00PM
+        </div>
+      </div>
+    </div>
+    <div class="remcom">
+      <div class="ch" (click)="setReminder(card,'Tommorow','8:00AM')">
+        <div class="text">
+          Tomorrow
+        </div>
+        <div class="time">
+          8:00AM
+        </div>
+      </div>
+    </div>
+    <div class="remcom">
+      <div class="ch" (click)="setReminder(card,'Mon','8:00AM')">
+        <div class="text">
+          Next week
+        </div>
+        <div class="time">
+          Mon,8:00AM
+        </div>
+      </div>
+    </div>
+    <div class="remcom">
+      <div class="ch">
+        <div class="text clk" (click)="$event.stopPropagation()" (click)="pdt = !pdt">
+          Pick date & time
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="reminders" [style.display]="pdt?'block':'none'">
+    <div class="arrow" (click)="pdt = !pdt" (click)="$event.stopPropagation()"></div>
+    <div class="pdt">Pick date &amp; time</div>
+    <div class="dropz">
+      <div>
+        <mat-form-field class="dzc">
+          <input matInput [matDatepicker]="picker" [formControl]="date" (click)="$event.stopPropagation()">
+          <mat-datepicker-toggle matSuffix [for]="picker">
+            <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
+          </mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field class="dzc" (click)="$event.stopPropagation()">
+          <mat-select>
+            <div class="opt">
+              <div class="opele">
+                <div class="day">
+                  Morning
+                </div>
+                <mat-option value="option">8:00 AM</mat-option>
+              </div>
+            </div>
+            <div class="opt">
+              <div class="opele">
+                <div class="day">
+                  Afternoon
+                </div>
+                <mat-option value="option">1:00 PM</mat-option>
+              </div>
+            </div>
+            <div class="opt">
+              <div class="opele">
+                <div class="day">
+                  Evening
+                </div>
+                <mat-option value="option">6:00 PM</mat-option>
+              </div>
+            </div>
+            <div class="opt">
+              <div class="opele">
+                <div class="day">Night</div>
+                <mat-option value="option">8:00 PM</mat-option>
+              </div>
+            </div>
+            <!-- <mat-option value="option">Custom</mat-option> -->
+          </mat-select>
+
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field class="dzc" (click)="$event.stopPropagation()">
+          <mat-select>
+            <mat-option value="option">Does not repeat</mat-option>
+            <mat-option value="option">Daily</mat-option>
+            <mat-option value="option">Weekly</mat-option>
+            <mat-option value="option">Monthly</mat-option>
+            <mat-option value="option">Yearly</mat-option>
+            <!-- <mat-option value="option">Custom</mat-option> -->
+          </mat-select>
+        </mat-form-field>
+      </div>
+    </div>
   </div>
 </mat-menu>
